<?xml version="1.0" encoding="utf-8"?>

<layout>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_begin="16dp"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_end="16dp"
        android:orientation="vertical" />



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:srcCompat="@drawable/ic_baseline_person_24"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_image"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        android:layout_marginTop="5dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/image"
            android:inputType="textUri" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintTop_toBottomOf="@id/input_image"
        android:layout_marginTop="5dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nom"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_phone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintTop_toBottomOf="@id/input_name"
        android:layout_marginTop="5dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/t_l_phone"
            android:inputType="phone"
            app:errorContentDescription="numéro de téléphone invalide"
            app:errorEnabled="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_web_site"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintTop_toBottomOf="@id/input_phone"
        android:layout_marginTop="5dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_web_site"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/webste"
            android:inputType="textUri"
            app:errorEnabled="true"
            app:errorContentDescription="l'Url n'est pas une URL valide"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_adress"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintTop_toBottomOf="@id/input_web_site"
        android:layout_marginTop="5dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_adress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/adresse"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_about"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="0dp"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintTop_toBottomOf="@id/input_adress"
        android:layout_marginTop="5dp"
        app:errorEnabled="true" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/a_propos_de_moi"
            android:inputType="textMultiLine"
            android:lines="4"
            android:maxLength="30"
            app:counterEnabled="true"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/input_about"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:text="@string/save"
        android:paddingVertical="12dp"
        android:layout_marginTop="0dp"
        android:enabled="false"/>





</androidx.constraintlayout.widget.ConstraintLayout>
</layout>